--- a/miniRT/libft/Makefile
+++ b/miniRT/libft/Makefile
@@ -2,21 +2,17 @@ CC = gcc
 CFLAGS = -Wall -Wextra -Werror
 
 NAME = libft.a
-SRCS = $(wildcard ./ft_[^l]*.c)
-SRCS_B = $(wildcard ./ft_l*.c)
+SRCS = $(wildcard ./ft_*.c)
 OBJS = $(SRCS:.c=.o)
 OBJS_B = $(SRCS_B:.c=.o)
 
 all : $(NAME)
 
 $(NAME) : $(OBJS)
-	ar -cr $@ $(OBJS)
-
-bonus : $(NAME) $(OBJS_B)
-	ar -cr $(NAME) $(OBJS_B)
+	ar -crs $@ $(OBJS)
 
 clean :
-	rm -f $(OBJS) $(OBJS_B)
+	rm -f $(OBJS)
 
 fclean : clean
 	rm -f $(NAME)
