--- a/push_swap/Makefile
+++ b/push_swap/Makefile
@@ -2,18 +2,25 @@ CC = gcc
 CFLAGS = -Wall -Wextra #-Werror
 
 NAME = push_swap
+CHECKER = checker
 INCLUDE = -Iincludes/
-SRCS = $(wildcard ./srcs/*.c)
-OBJS = $(SRCS:.c=.o)
-DEPS = $(SRCS:.c=.d)
+SRCS_P = $(wildcard ./srcs_p/*.c)
+OBJS_P = $(SRCS_P:.c=.o)
+DEPS_P = $(SRCS_P:.c=.d)
+SRCS_C = $(wildcard ./srcs_c/*.c)
+OBJS_C = $(SRCS_C:.c=.o)
+DEPS_C = $(SRCS_C:.c=.d)
 
-all : $(NAME)
+all : $(NAME) $(CHECKER)
 
-$(NAME) : $(OBJS)
-	$(CC) $(CFLAGS) $(OBJS) -o $@
+$(NAME) : $(OBJS_P)
+	$(CC) $(CFLAGS) $^ -o $@
+
+$(CHECKER) : #$(OBJS_C)
+#	$(CC) $(CFLAGS) $^ -o $@
 
 clean :
-	rm -f $(OBJS) $(DEPS)
+	rm -f $(OBJS_P) $(DEPS_P) $(OBJS_C) $(DEPS_C)
 
 fclean : clean
 	rm -f $(NAME)
@@ -23,6 +30,6 @@ re : fclean all
 .c.o :
 	$(CC) $(CFLAGS) -MD -c -o $@ $< $(INCLUDE)
 
--include $(DEPS)
+-include $(DEPS_P) $(DEPS_C)
 
 .PHONY: all clean fclean re
