--- a/push_swap/Makefile
+++ b/push_swap/Makefile
@@ -4,10 +4,10 @@ CFLAGS = -Wall -Wextra #-Werror
 NAME = push_swap
 CHECKER = checker
 INCLUDE = -Iincludes/
-SRCS_P = $(wildcard ./srcs_p/*.c)
+SRCS_P = $(wildcard ./srcs/*.c) push_swap_main.c
 OBJS_P = $(SRCS_P:.c=.o)
 DEPS_P = $(SRCS_P:.c=.d)
-SRCS_C = $(wildcard ./srcs_c/*.c)
+SRCS_C = $(wildcard ./srcs/*.c) checker_main.c
 OBJS_C = $(SRCS_C:.c=.o)
 DEPS_C = $(SRCS_C:.c=.d)
 
@@ -16,8 +16,8 @@ all : $(NAME) $(CHECKER)
 $(NAME) : $(OBJS_P)
 	$(CC) $(CFLAGS) $^ -o $@
 
-$(CHECKER) : #$(OBJS_C)
-#	$(CC) $(CFLAGS) $^ -o $@
+$(CHECKER) : $(OBJS_C)
+	$(CC) $(CFLAGS) $^ -o $@
 
 clean :
 	rm -f $(OBJS_P) $(DEPS_P) $(OBJS_C) $(DEPS_C)
