--- a/pipex/Makefile
+++ b/pipex/Makefile
@@ -1,28 +1,29 @@
 NAME 		= pipex
+NAME_B		= pipex
 
 CC 			= gcc
 CFLAGS 		= -Wall -Wextra -Werror
-
 
 LIBFT 		= libft.a
 INCLUDE 	= ./includes/
 SRCS_DIR 	= ./srcs/
 
 SRCS		= $(addprefix $(SRCS_DIR),\
-			  pipex.c\
-			  redirect.c\
+			  pipex_bonus.c\
+			  redirect_bonus.c\
 			  utils.c\
 			  get_next_line.c\
-			  get_next_line_utils.c)
+			  get_next_line_utils.c\
+			  )
 OBJS 		= $(SRCS:.c=.o)
 DEPS 		= $(SRCS:.c=.d)
 
 all : $(NAME)
 
-bonus : $(NAME)
+bonus : all
 
 $(NAME) : $(LIBFT) $(OBJS)
-	$(CC) $(CFLAGS) $(OBJS) -o $@ -L. -lft $(RL) $(RL_LIB)
+	$(CC) $(CFLAGS) $(OBJS) -o $@ -L. -lft
 
 $(LIBFT) :
 	make all -C ./libft
@@ -31,7 +32,7 @@ $(LIBFT) :
 
 clean :
 	make clean -C ./libft
-	rm -f $(OBJS) $(DEPS)
+	rm -f $(OBJS) $(DEPS) $(OBJS_B) $(DEPS_B)
 
 fclean : clean
 	rm -f $(LIBFT) ./libft/libft.a
@@ -39,9 +40,13 @@ fclean : clean
 
 re : fclean all
 
-.c.o :
+%.o : %.c
+ifeq ($(MAKECMDGOALS), bonus)
 	$(CC) $(CFLAGS) -DBONUS=1 -MD -c -o $@ $< -I$(INCLUDE)
+else
+	$(CC) $(CFLAGS) -MD -c -o $@ $< -I$(INCLUDE)
+endif
 
--include $(DEPS)
+-include $(DEPS) $(DEPS_B)
 
 .PHONY: all clean fclean re bonus
