--- a/cpp/cpp00/ex02/Makefile
+++ b/cpp/cpp00/ex02/Makefile
@@ -1,11 +1,10 @@
-NAME		= Megaphone
+NAME	= account
 
-CC			= clang++ 
-CFLAGS		= -Wall -Wextra -Werror -std=c++98
+CC		= clang++ 
+CFLAGS	= -Wall -Wextra -Werror -std=c++98
 
-SRCS		= megaphone.cpp
-OBJS		= $(SRCS:.cpp=.o)
-DEPS		= $(SRCS:.cpp=.d)
+SRCS	= Account.cpp test.cpp
+OBJS	= $(SRCS:.cpp=.o)
 
 all : $(NAME)
 
@@ -13,12 +12,7 @@ $(NAME) : $(OBJS)
 	$(CC) -o $(NAME) $(CFLAGS) $(OBJS)
 
 %.o: %.c
-	$(CC) $(CFLAGS) -MD -c -o $@ $<
-
-test:	$(NAME)
-	./megaphone "shhhhh... I think the students are asleep..."
-	./megaphone Damnit " ! " "Sorry students, I thought this thing was off."
-	./megaphone
+	$(CC) $(CFLAGS) -c -o $@ $<
 
 clean:
 	rm -rf $(OBJS)
@@ -28,6 +22,5 @@ fclean: clean
 
 re:				fclean all
 
--include $(DEPS)
 
-.PHONY:			all clean fclean re test
+.PHONY:			all clean fclean re
