--- a/cpp/cpp00/ex01/Makefile
+++ b/cpp/cpp00/ex01/Makefile
@@ -5,21 +5,24 @@ CFLAGS	= -Wall -Wextra -Werror -std=c++98
 
 SRCS	= main.cpp Contact.cpp Phonebook.cpp
 OBJS	= $(SRCS:.cpp=.o)
+DEPS	= $(SRCS:.cpp=.d)
 
 all : $(NAME)
 
 $(NAME) : $(OBJS)
 	$(CC) -o $(NAME) $(CFLAGS) $(OBJS)
 
-%.o : %.c
-	$(CC) $(CFLAGS) -c -o $@ $< -I./includes
+%.o : %.cpp
+	$(CC) $(CFLAGS) -MD -c -o $@ $<
 
 clean :
-	rm -rf $(OBJS)
+	rm -rf $(OBJS) $(DEPS)
 
 fclean : clean
 	rm -rf $(NAME)
 
 re : fclean all
+
+-include $(DEPS)
 
 .PHONY : all clean fclean re
