--- a/cpp/cpp04/ex03/Makefile
+++ b/cpp/cpp04/ex03/Makefile
@@ -3,7 +3,7 @@ NAME	= poly
 CC		= clang++ 
 CFLAGS	= -Wall -Wextra -Werror -std=c++98
 
-SRCS	= main.cpp
+SRCS	= main.cpp AMateria.cpp Cure.cpp Ice.cpp MateriaSource.cpp Character.cpp
 OBJS	= $(SRCS:.cpp=.o)
 DEPS	= $(SRCS:.cpp=.d)
 
