--- a/cpp/cpp04/ex02/Makefile
+++ b/cpp/cpp04/ex02/Makefile
@@ -3,7 +3,7 @@ NAME	= poly
 CC		= clang++ 
 CFLAGS	= -Wall -Wextra -Werror -std=c++98
 
-SRCS	= main.cpp
+SRCS	= main.cpp Animal.cpp Dog.cpp Cat.cpp Brain.cpp
 OBJS	= $(SRCS:.cpp=.o)
 DEPS	= $(SRCS:.cpp=.d)
 
